--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+ <link rel="stylesheet" href="./css/style.css"> 
   <title>Frontend Mentor | Audiophile e-commerce website</title>
 </head>
 <body>
@@ -24,7 +26,7 @@
       </nav>
       <div class="cart">
         <span class="shopping-cart">
-          <i class="fas fa-shopping-cart"></i>
+         <img src="./assets/shared/desktop/icon-cart.svg" alt="Cart Icon">
           <span class="cart-count">0</span>
         </span>
       </div>
