working on hero

--- a/index.html
+++ b/index.html
@@ -34,17 +34,19 @@
   </header>
   
  <main>
-  <section class="container hero">
-    <div class="hero-text">
-      <span class="new-product">New Product</span>
-      <h1 class="hero-title">xx99 mark ii headphones</h1>
-      <p class="hero-description">
-        Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
-      </p>
-      <a href="#" class="btn btn-primary">see product</a>
-    </div>
-    <div class="hero-image">
-      <img src="./assets/home/desktop/image-hero.jpg" alt="Hero Image">
+  <section class="hero">
+    <div class="container">
+      <div class="hero-text">
+        <span class="new-product">New Product</span>
+        <h1 class="hero-title">xx99 mark ii headphones</h1>
+        <p class="hero-description">
+          Experience natural, lifelike audio and exceptional build quality made for the passionate music enthusiast.
+        </p>
+        <a href="#" class="btn btn-primary">see product</a>
+      </div>
+      <div class="hero-image">
+        <!-- <img src="./assets/home/desktop/image-hero.jpg" alt="Hero Image"> -->
+      </div>
     </div>
   </section>
   <section class="container products">
