completed products thumbnail

--- a/index.html
+++ b/index.html
@@ -53,21 +53,20 @@
     <div class="product-cards">
       <div class="product-card">
         <div class="product-card-image">
-          <img src="./assets/home/desktop/image-product-1.jpg" alt="Product Image">
+          <img src="./assets/shared/desktop/image-category-thumbnail-headphones.png" alt="Product Image">
         </div>
         <div class="product-info">
           <h3 class="product-lable">Headphones</h3>
           <a href="#" class="shop">
             shop
             <!-- right angle icon -->
-
           </a>
         </div>
         
         </div>
       <div class="product-card">
         <div class="product-card-image">
-          <img src="./assets/home/desktop/image-product-1.jpg" alt="Product Image">
+          <img src="./assets/shared/desktop/image-category-thumbnail-earphones.png" alt="Product Image">
         </div>
         <div class="product-info">
           <h3 class="product-lable">Earphones</h3>
@@ -81,7 +80,7 @@
         </div>
       <div class="product-card">
         <div class="product-card-image">
-          <img src="./assets/home/desktop/image-product-1.jpg" alt="Product Image">
+          <img src="./assets/shared/desktop/image-category-thumbnail-speakers.png" alt="Product Image">
         </div>
         <div class="product-info">
           <h3 class="product-lable">Speakers</h3>
@@ -99,7 +98,7 @@
   <section class="container featured-product">
     <div class="featured-card">
       <div class="featured-card-imge">
-        <img src="./assets/home/desktop/image-speaker-zx9.png" alt="ZX9 Speaker">
+        <img src="./assets/shared/desktop/image-category-thumbnail-speakers.png" alt="ZX9 Speaker">
       </div>
       <div class="featured-card-description">
         <h3>ZX9 Speaker</h3>
