featured-card done

--- a/index.html
+++ b/index.html
@@ -95,9 +95,10 @@
       </div>
 
   </section>
+
   <section class="container featured-product">
     <div class="featured-card">
-      <div class="featured-card-imge">
+      <div class="featured-card-image">
         <img src="./assets/shared/desktop/image-category-thumbnail-speakers.png" alt="ZX9 Speaker">
       </div>
       <div class="featured-card-description">
