min-products section done

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <section class="container featured-product">
     <div class="featured-card">
-      <div class="featured-card-image">
+      <div class="featured-card-imge">
         <img src="./assets/shared/desktop/image-category-thumbnail-speakers.png" alt="ZX9 Speaker">
       </div>
       <div class="featured-card-description">
@@ -107,16 +107,16 @@
         <a href="#" class="btn btn-secondary">see product</a>
       </div>
     </div>
-    <div class="mini-featured-card">
+    <div class="mini-featured-card speaker">
       <div class="mini-featured-card-description">
         <h4>ZX7 speaker</h4>
         <a href="#" class="btn btn-no-background">see product</a>
       </div>
       <div class="mini-featured-image">
-        <img src="./assets/home/desktop/image-speaker-zx7.jpg" alt="ZX7 Speaker">
+        <!-- <img src="./assets/home/desktop/image-speaker-zx7.jpg" alt="ZX7 Speaker"> -->
       </div>
     </div>
-    <div class="mini-featured-card">
+    <div class="mini-featured-card earphone">
       <div class="mini-featured-image">
         <img src="./assets/home/desktop/image-earphones-yx1.jpg" alt="YX1 Earphone">
       </div>
