--- a/index.html
+++ b/index.html
@@ -147,23 +147,40 @@
 
 <footer>
   <div class="container">
-    <h3 class="footer-logo">
-      <a href="#">audiophile</a>
-    </h3>
-    <nav class="footer-nav">
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Headphones</a></li>
-        <li><a href="#">Speakers</a></li>
-        <li><a href="#">Earphones</a></li>
-      </ul>
-    </nav>
+    <div class="main-footer-nav">
+      <h3 class="footer-logo">
+        <a href="#">audiophile</a>
+      </h3>
+      <nav class="footer-nav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Headphones</a></li>
+          <li><a href="#">Speakers</a></li>
+          <li><a href="#">Earphones</a></li>
+        </ul>
+      </nav>
+    </div>
   <p>
   Audiophile is an all in one stop to fulfill your audio needs. We're a small team of music lovers 
   and sound specialists who are devoted to helping you get the most out of personal audio. Come and 
   visit our demo facility - we’re open 7 days a week.
   </p>
-  <p>Copyright 2021. All Rights Reserved</p>
+  <div class="copyright-social">
+    <p>Copyright 2021. All Rights Reserved</p>
+    <div class="social">
+      <ul>
+        <li>
+          <a href="#"><img src="./assets/shared/desktop/icon-facebook.svg" alt=""></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/shared/desktop/icon-instagram.svg" alt=""></a>
+        </li>
+        <li>
+          <a href="#"><img src="./assets/shared/desktop/icon-twitter.svg" alt=""></a>
+        </li>
+      </ul>
+    </div>
+  </div>
   </div>
 </footer>
 
