headphone-1 details page added"

--- a/detail-headphone1.html
+++ b/detail-headphone1.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
  <link rel="stylesheet" href="./css/style.css"> 
  <link rel="stylesheet" href="./css/products.css"> 
-  <title>Earphones</title>
+  <title>Frontend Mentor | Earphones</title>
 </head>
 <body>
   <header>
@@ -35,32 +35,85 @@
   </header>
   
  <main>
-  <section class="banner">
-    <div class="container">
-      <div class="banner-text">
-          <h3>Earphones</h3>
-      </div>
-    </div>
-  </section>
 
 <section class="container products">
     <div class="products-card">
         <div class="product-card">
-          <div class="product-image">
-              <img src="./assets/shared/desktop/image-category-thumbnail-earphones.png" alt="">
-          </div>
+          
+            <div class="product-image">
+                <span class="nav">
+                    <a href="#">Go back</a>
+                </span>
+                <img src="./assets/shared/desktop/image-xx59-headphones.jpg" alt="">
+            </div>
             <div class="product-description">
                 <span class="new-product">New Product</span>
-                <h3>YX1 WIRELESS EARPHONES</h3>
-                <p>Tailor your listening experience with bespoke dynamic drivers from the new YX1 Wireless Earphones. Enjoy incredible high-fidelity sound even in noisy environments with its active noise cancellation feature.</p>
-                <a href="#" class="btn btn-primary">see product</a>
+                <h3>XX99 Mark II Headphones</h3>
+                <p>As the gold standard for headphones, the classic XX99 Mark I offers detailed and accurate audio reproduction for audiophiles, mixing engineers, and music aficionados alike in studios and on the go.</p>
+                <p class="price"><span class="currency">$</span> <span class="value">2,999</span></p>
+                <div class="main-btn-group">
+                    <a href="#" class="btn btn-primary">Add to cart</a>
+                    <div class="plus-minus-group">
+                        <span class="minus">-</span>
+                        <span class="count">1</span>
+                        <span class="plus">+</span>
+                    </div>
+                </div>
             </div>
         </div>
-
     </div>
-
 </section>
+
+<section class="container features">
+  <div class="features-description">
+    <h3>Features</h3>
+    <p>Featuring a genuine leather head strap and premium earcups, these headphones deliver superior comfort for those who like to enjoy endless listening. It includes intuitive controls designed for any situation. Whether you’re taking a business call or just in your own personal space, the auto on/off and pause features ensure that you’ll never miss a beat.</p>
+    <p>The advanced Active Noise Cancellation with built-in equalizer allow you to experience your audio world on your terms. It lets you enjoy your audio in peace, but quickly interact with your surroundings when you need to. Combined with Bluetooth 5. 0 compliant connectivity and 17 hour battery life, the XX99 Mark II headphones gives you superior sound, cutting-edge technology, and a modern design aesthetic.</p>
+  </div>
+  <div class="in-the-box">
+    <h3>In the box</h3>
+    <ul>
+      <li><span class="orange">1x </span> Headphone Unit</li>
+      <li><span class="orange">2x </span> Replacement Earcups</li>
+      <li><span class="orange">1x </span> User Manual</li>
+      <li><span class="orange">1x </span> 3.5mm 5m Audio Cable</li>
+      <li><span class="orange">1x </span> Travel Bag</li>
+    </ul>
+  </div>
+</section>
+
+<section class="product-gallery container">
+  <div class="product-gallery-images">
+    <div class="mini-images">
+      <img src="./assets/product-xx99-mark-two-headphones/desktop/image-gallery-1.jpg" alt="">
+      <img src="./assets/product-xx99-mark-two-headphones/desktop/image-gallery-2.jpg" alt="">
+    </div>
+    <div class="large-image">
+    </div>
+  </div>
+</section>
+
   <section class="container products">
+
+    <h2 class="ymal-title">you may also like</h2>
+    <div class="you-may-also-like">
+
+      <div class="ymal-card">
+        <img src="./assets/shared/desktop/image-xx99-mark-one-headphones.jpg" alt="">
+        <h3>xx99 mark I</h3>
+        <a href="#" class="btn btn-primary">see details</a>
+      </div>
+      <div class="ymal-card">
+        <img src="./assets/shared/desktop/image-xx59-headphones.jpg" alt="">
+        <h3>xx59</h3>
+        <a href="#" class="btn btn-primary">see details</a>
+      </div>
+      <div class="ymal-card">
+        <img src="./assets/shared/desktop/image-zx9-speaker.jpg" alt="">
+        <h3>zx9 speaker</h3>
+        <a href="#" class="btn btn-primary">see details</a>
+      </div>
+    </div>
     <div class="product-cards">
       <div class="product-card">
         <div class="product-card-image">
